@@ -14,6 +14,11 @@
 gui.verboseErrorDialog=true
 
 ###
+# Upload properties for applications.
+###
+uploads.storeEmptyDirectories=true
+
+###
 # S3Service properties
 ###
 s3service.end-point-host=s3.amazonaws.com
